gha: keep trusted and untrusted paths separate, and simplify actions ref
[ upstream commit 247e6e0fcf4879fef966b6bccd2f692241a63015 ]

[ backporter's notes: hit multiple conflicts due to the absence of the
  helm-default action in the v1.12 branch, resolved updating the
  chart-dir path as appropriate. Additionally, skipped the hunks
  for workflows which did not exist in v1.12. ]

A few GHA workflows got recently modified to hardcode the repository and
branch of the actions hosted locally (e.g., [1]). This was a security
measure, as they are triggered after checking out the untrusted context
(i.e., PR branch), and thus it would be possible for an external PR to
inject malicious code.

Yet, at the same time, this change mostly defeats the smooth development
process enabled by ariane (which automatically uses the workflow and
context from the PR for trusted branches -- i.e., in cilium/cilium),
requiring again to manually modify those references for testing purposes.
Similarly, it also requires manual adaptations when changes are backported
to stable branches, or to allow running them from forks, which are easy
to overlook.

As an alternative solution, let's only check out the helm chart from the
untrusted context in a separate directory, without overriding any of
the trusted files (i.e., from the target branch) retrieved initially.
This way, we are guaranteed that the local github actions are always
trusted (as we are not overriding them, nor we are executing any script
which could modify them), and can be invoked directly, without any additional
constraint. A key aspect for this is that helm charts cannot execute
arbitrary code in the client host.

Another difference, compared to the previous approach, is that now we
also execute the `./contrib/scripts/kind.sh` script from the trusted
context (i.e., target branch) instead of the PR context. However, this
file is effectively part of the workflow definition, and this change
brings consistency with the rest of it. The 

--- a/.github/workflows/conformance-gke.yaml
+++ b/.github/workflows/conformance-gke.yaml
@@ -146,7 +146,7 @@ jobs:
           fi
 
           CILIUM_INSTALL_DEFAULTS="--cluster-name=${{ env.clusterName }}-${{ matrix.config.index }} \
-            --chart-directory=install/kubernetes/cilium \
+            --chart-directory=./untrusted/install/kubernetes/cilium \
             --helm-set=image.repository=quay.io/${{ env.QUAY_ORGANIZATION_DEV }}/cilium-ci \
             --helm-set=image.useDigest=false \
             --helm-set=image.tag=${SHA} \
@@ -181,6 +181,9 @@ jobs:
         with:
           ref: ${{ steps.vars.outputs.sha }}
           persist-credentials: false
+          path: untrusted
+          sparse-checkout: |
+            install/kubernetes/cilium
 
       - name: Install Cilium CLI
         uses: cilium/cilium-cli@5362f383942260c0aed4f3876e09c3452435577a # v0.14.8
