gha: keep trusted and untrusted paths separate, and simplify actions ref
A few GHA workflows got recently modified to hardcode the repository and
branch of the actions hosted locally (e.g., [1]). This was a security
measure, as they are triggered after checking out the untrusted context
(i.e., PR branch), and thus it would be possible for an external PR to
inject malicious code.

Yet, at the same time, this change mostly defeats the smooth development
process enabled by ariane (which automatically uses the workflow and
context from the PR for trusted branches -- i.e., in cilium/cilium),
requiring again to manually modify those references for testing purposes.
Similarly, it also requires manual adaptations when changes are backported
to stable branches, or to allow running them from forks, which are easy
to overlook.

As an alternative solution, let's only check out the helm chart from the
untrusted context in a separate directory, without overriding any of
the trusted files (i.e., from the target branch) retrieved initially.
This way, we are guaranteed that the local github actions are always
trusted (as we are not overriding them, nor we are executing any script
which could modify them), and can be invoked directly, without any additional
constraint. A key aspect for this is that helm charts cannot execute
arbitrary code in the client host.

Another difference, compared to the previous approach, is that now we
also execute the `./contrib/scripts/kind.sh` script from the trusted
context (i.e., target branch) instead of the PR context. However, this
file is effectively part of the workflow definition, and this change
brings consistency with the rest of it. The same also applies for the
Gateway API conformance tests.

[1]: 654d92f29c4f ("ci-e2e: Use lvh-kind in secure way")

Signed-off-by: Marco Iorio <marco.iorio@isovalent.com>

--- a/.github/workflows/conformance-e2e.yaml
+++ b/.github/workflows/conformance-e2e.yaml
@@ -261,7 +261,7 @@ jobs:
         uses: ./.github/actions/cilium-config
         with:
           image-tag: ${{ steps.vars.outputs.sha }}
-          chart-dir: './install/kubernetes/cilium'
+          chart-dir: './untrusted/install/kubernetes/cilium'
           tunnel: ${{ matrix.tunnel }}
           devices: ${{ matrix.devices }}
           endpoint-routes: ${{ matrix.endpoint-routes }}
@@ -283,6 +283,9 @@ jobs:
         with:
           ref: ${{ steps.vars.outputs.sha }}
           persist-credentials: false
+          path: untrusted
+          sparse-checkout: |
+            install/kubernetes/cilium
 
       - name: Install Cilium CLI-cli
         uses: cilium/cilium-cli@4aa6347c532075df28027772fa1e4ec2f7415341 # v0.15.20
@@ -304,7 +307,7 @@ jobs:
           echo params="--xdp --secondary-network \"\" 3 \"\" \"\" ${{ matrix.kube-proxy }} $IP_FAM" >> $GITHUB_OUTPUT
 
       - name: Provision K8s on LVH VM
-        uses: cilium/cilium/.github/actions/lvh-kind@main
+        uses: ./.github/actions/lvh-kind
         with:
           test-name: e2e-conformance
           kernel: ${{ matrix.kernel }}
