docs: add deprecation notice for enable-remote-node-identity for v1.15
The enable-remote-node-identity agent flag was marked as deprecated for
1.15 in commit cf472ef90f61 ("daemon: Deprecate
EnableRemoteNodeIdentity"). Add an upgrade note about the flag and the
corresponding remoteNodeIdentity helm value being deprecated.

Signed-off-by: Tobias Klauser <tobias@cilium.io>

--- a/install/kubernetes/cilium/values.yaml
+++ b/install/kubernetes/cilium/values.yaml
@@ -2232,6 +2232,7 @@ envoy:
 
 # -- Enable use of the remote node identity.
 # ref: https://docs.cilium.io/en/v1.7/install/upgrade/#configmap-remote-node-identity
+# Deprecated without replacement in 1.15. To be removed in 1.16.
 remoteNodeIdentity: true
 
 # -- Enable resource quotas for priority classes used in the cluster.
