--- a/.github/workflows/conformance-e2e.yaml
+++ b/.github/workflows/conformance-e2e.yaml
@@ -341,10 +341,10 @@ jobs:
           fi
 
           if [ "${{ matrix.host-fw }}" == "true" ]; then
-            # Missed tail calls until https://github.com/cilium/cilium/issues/28088 is fixed,
-            # host datapath once cilium-cli is upgraded to a version that includes 
+            # Remove once cilium-cli is upgraded to a version that includes 
             # https://github.com/cilium/cilium-cli/pull/2206.
-            EXTRA+=("--expected-drop-reasons=+Missed tail call,+Host datapath not ready")
+            # (note v1.14: cilium-cli v0.15.20 is needed, not merged as of this backport)
+            EXTRA+=("--expected-drop-reasons=+Host datapath not ready")
           fi
 
           ./cilium-cli connectivity test --include-unsafe-tests --collect-sysdump-on-failure \
