ci-ipsec-upgrade: add missed tail calls as expected drop reason
Instead of the changes in 41a3b06af0f4831b3692fa8b0c0d673b7cbe879f we
should add missed tail calls as an expected drop reason to allow such
failures.

Signed-off-by: Robin Gögge <r.goegge@isovalent.com>

--- a/.github/workflows/tests-ipsec-upgrade.yaml
+++ b/.github/workflows/tests-ipsec-upgrade.yaml
@@ -335,7 +335,7 @@ jobs:
           job-name: ipsec-downgrade-${{ matrix.name }}
           # Disable no-unexpected-packet-drops (formerly no-missed-tail-calls)
           # due to https://github.com/cilium/cilium/issues/26739
-          extra-connectivity-test-flags: --test '!no-unexpected-packet-drops'
+          extra-connectivity-test-flags: --expected-drop-reasons "+Missed tail call"
           operation-cmd: |
             CILIUM_CLI_MODE=helm ./cilium-cli upgrade \
               ${{ steps.cilium-stable-config.outputs.config }}
