conn-disrupt: Allowlist CT buffer drops
Commit 94ec45a ("bpf: unconditionally migrate cilium_calls_* maps
during ELF load") in main fixed a set of packet drops that can happen
during a short time on agent restarts. Now that our CI is more sensitive
to such drops, we are noticing them on all stable branches.

Unfortunately, the fix is too invasive to confidently backport to v1.12.
Instead, this commit allowlist the CT buffer drops we are seeing in CI
when downgrading from 1.13 to 1.12.

Signed-off-by: Robin Gögge <r.goegge@isovalent.com>

--- a/.github/workflows/tests-ipsec-upgrade.yaml
+++ b/.github/workflows/tests-ipsec-upgrade.yaml
@@ -335,7 +335,7 @@ jobs:
           job-name: ipsec-downgrade-${{ matrix.name }}
           # Disable no-unexpected-packet-drops (formerly no-missed-tail-calls)
           # due to https://github.com/cilium/cilium/issues/26739
-          extra-connectivity-test-flags: --expected-drop-reasons "+Missed tail call"
+          extra-connectivity-test-flags: --expected-drop-reasons "+Missed tail call,+Failed to update or lookup TC buffer"
           operation-cmd: |
             CILIUM_CLI_MODE=helm ./cilium-cli upgrade \
               ${{ steps.cilium-stable-config.outputs.config }}
