Prepare for release v1.15.0-rc.1
Signed-off-by: André Martins <andre@cilium.io>

--- a/install/kubernetes/Makefile.digests
+++ b/install/kubernetes/Makefile.digests
@@ -2,12 +2,12 @@
 # Copyright 2023 Authors of Cilium
 # SPDX-License-Identifier: Apache-2.0
 
-export CILIUM_DIGEST := "sha256:dfd696fb4325e996098607224cf379ccdbbe969634750fa10082e7ac31d0819a"
-export CLUSTERMESH_APISERVER_DIGEST := "sha256:7a6be505270347b8e4076941b282ecd3c89cbdce68f50a3ba6e0bd5a60553c47"
-export DOCKER_PLUGIN_DIGEST := "sha256:fe6325f2268adafa28b0a0a81f5f2254014fc1aa8981c47fce6c688e3879993a"
-export HUBBLE_RELAY_DIGEST := "sha256:eb89a6c12bef00f62f393630958f58d769f0add5ba6fa914180ec21d845034ae"
-export OPERATOR_ALIBABACLOUD_DIGEST := "sha256:9f34a4d32c87f7dfb7fff45c2660e58113a036dca06e75ea20b5bd46856c20fa"
-export OPERATOR_AWS_DIGEST := "sha256:d28d947653bff9ad9a010bdc4bb75d3f0ce5517b601d768075f11ea32242491c"
-export OPERATOR_AZURE_DIGEST := "sha256:0f6828ab7688159e3b7bc259094af6c9643783a48b2fc0630885dcabe9249831"
-export OPERATOR_GENERIC_DIGEST := "sha256:cc0800697151d9a68c9547c66e9d5f4a67537efd369cb10caf19e79748b24b02"
-export OPERATOR_DIGEST := "sha256:5e14c97ee92c6eef799b3125ab4b557c3c7c6cfe55d78c8c655bdf7aae4212ab"
+export CILIUM_DIGEST := ""
+export CLUSTERMESH_APISERVER_DIGEST := ""
+export DOCKER_PLUGIN_DIGEST := ""
+export HUBBLE_RELAY_DIGEST := ""
+export OPERATOR_ALIBABACLOUD_DIGEST := ""
+export OPERATOR_AWS_DIGEST := ""
+export OPERATOR_AZURE_DIGEST := ""
+export OPERATOR_GENERIC_DIGEST := ""
+export OPERATOR_DIGEST := ""
