--- a/install/kubernetes/cilium/values.yaml
+++ b/install/kubernetes/cilium/values.yaml
@@ -146,11 +146,11 @@ rollOutCiliumPods: false
 image:
   override: ~
   repository: "quay.io/cilium/cilium"
-  tag: "v1.15.0-rc.0"
+  tag: "v1.15.0-rc.1"
   pullPolicy: "IfNotPresent"
   # cilium-digest
-  digest: "sha256:dfd696fb4325e996098607224cf379ccdbbe969634750fa10082e7ac31d0819a"
-  useDigest: true
+  digest: ""
+  useDigest: false
 
 # -- Affinity for cilium-agent.
 affinity:
@@ -1224,10 +1224,10 @@ hubble:
     image:
       override: ~
       repository: "quay.io/cilium/hubble-relay"
-      tag: "v1.15.0-rc.0"
+      tag: "v1.15.0-rc.1"
        # hubble-relay-digest
-      digest: "sha256:eb89a6c12bef00f62f393630958f58d769f0add5ba6fa914180ec21d845034ae"
-      useDigest: true
+      digest: ""
+      useDigest: false
       pullPolicy: "IfNotPresent"
 
     # -- Specifies the resources for the hubble-relay pods
@@ -2466,16 +2466,16 @@ operator:
   image:
     override: ~
     repository: "quay.io/cilium/operator"
-    tag: "v1.15.0-rc.0"
+    tag: "v1.15.0-rc.1"
     # operator-generic-digest
-    genericDigest: "sha256:cc0800697151d9a68c9547c66e9d5f4a67537efd369cb10caf19e79748b24b02"
+    genericDigest: ""
     # operator-azure-digest
-    azureDigest: "sha256:0f6828ab7688159e3b7bc259094af6c9643783a48b2fc0630885dcabe9249831"
+    azureDigest: ""
     # operator-aws-digest
-    awsDigest: "sha256:d28d947653bff9ad9a010bdc4bb75d3f0ce5517b601d768075f11ea32242491c"
+    awsDigest: ""
     # operator-alibabacloud-digest
-    alibabacloudDigest: "sha256:9f34a4d32c87f7dfb7fff45c2660e58113a036dca06e75ea20b5bd46856c20fa"
-    useDigest: true
+    alibabacloudDigest: ""
+    useDigest: false
     pullPolicy: "IfNotPresent"
     suffix: ""
 
@@ -2761,10 +2761,10 @@ preflight:
   image:
     override: ~
     repository: "quay.io/cilium/cilium"
-    tag: "v1.15.0-rc.0"
+    tag: "v1.15.0-rc.1"
     # cilium-digest
-    digest: "sha256:dfd696fb4325e996098607224cf379ccdbbe969634750fa10082e7ac31d0819a"
-    useDigest: true
+    digest: ""
+    useDigest: false
     pullPolicy: "IfNotPresent"
 
   # -- The priority class to use for the preflight pod.
@@ -2923,10 +2923,10 @@ clustermesh:
     image:
       override: ~
       repository: "quay.io/cilium/clustermesh-apiserver"
-      tag: "v1.15.0-rc.0"
+      tag: "v1.15.0-rc.1"
       # clustermesh-apiserver-digest
-      digest: "sha256:7a6be505270347b8e4076941b282ecd3c89cbdce68f50a3ba6e0bd5a60553c47"
-      useDigest: true
+      digest: ""
+      useDigest: false
       pullPolicy: "IfNotPresent"
 
     etcd:
