Added doc for new config field --egress-deny-tuples and updated the cilium config template with this field
Signed-off-by: Tamilmani <tamanoha@microsoft.com>

--- a/install/kubernetes/cilium/templates/cilium-configmap.yaml
+++ b/install/kubernetes/cilium/templates/cilium-configmap.yaml
@@ -479,6 +479,10 @@ data:
   service-no-backend-response: "{{ .Values.serviceNoBackendResponse }}"
 {{- end}}
 
+{{- if hasKey .Values "egressDenyTuples" }}
+  egress-deny-tuples: "{{ .Values.egressDenyTuples }}"
+{{- end}}
+
 {{- if .Values.MTU }}
   mtu: {{ .Values.MTU | quote }}
 {{- end }}
