Prepare for release v1.12.18
Signed-off-by: Maxim Mikityanskiy <maxim@isovalent.com>

--- a/install/kubernetes/Makefile.digests
+++ b/install/kubernetes/Makefile.digests
@@ -2,12 +2,12 @@
 # Copyright 2023 Authors of Cilium
 # SPDX-License-Identifier: Apache-2.0
 
-export CILIUM_DIGEST := "sha256:323e5762a2412e4f274c34ffb655d57b439d3c057ada48167f8aa038729c1661"
-export CLUSTERMESH_APISERVER_DIGEST := "sha256:7bf626ebaafeaf51870f9f5dc4d5127797da97ab5365405cccadb480dae900cf"
-export DOCKER_PLUGIN_DIGEST := "sha256:f2c7392a06baf33084115ea98f96620eb49fc12a1815b08d5bcbb5976f58035f"
-export HUBBLE_RELAY_DIGEST := "sha256:4387d06a9c0089de6a27d815a9a475f539b2f9eaf6ec7d95d1670b502e18f7ea"
-export OPERATOR_ALIBABACLOUD_DIGEST := "sha256:06e7a741d4b74790dc8c9fcc594608630517cc7366e4d4ba97eef7133bd94bfb"
-export OPERATOR_AWS_DIGEST := "sha256:aa2ba6331ec84e64f46205dbd9043a69b89f2eb177bbd29d7c5c88a052809cb0"
-export OPERATOR_AZURE_DIGEST := "sha256:a1f1151454586b7aa7e93564975074d861d8020cb52bd82a565ce645ab671645"
-export OPERATOR_GENERIC_DIGEST := "sha256:17a1b1cbc38bcce00fd4d793c7b6ab630fdaaa464d53e05967625c7b7306730d"
-export OPERATOR_DIGEST := "sha256:e777fff0f61af556ad6c0c67abb1524dbfddb95da80875aa6456ad4b6899ae41"
+export CILIUM_DIGEST := ""
+export CLUSTERMESH_APISERVER_DIGEST := ""
+export DOCKER_PLUGIN_DIGEST := ""
+export HUBBLE_RELAY_DIGEST := ""
+export OPERATOR_ALIBABACLOUD_DIGEST := ""
+export OPERATOR_AWS_DIGEST := ""
+export OPERATOR_AZURE_DIGEST := ""
+export OPERATOR_GENERIC_DIGEST := ""
+export OPERATOR_DIGEST := ""
