--- a/install/kubernetes/cilium/values.yaml
+++ b/install/kubernetes/cilium/values.yaml
@@ -110,11 +110,11 @@ rollOutCiliumPods: false
 image:
   override: ~
   repository: "quay.io/cilium/cilium"
-  tag: "v1.12.17"
+  tag: "v1.12.18"
   pullPolicy: "IfNotPresent"
   # cilium-digest
-  digest: "sha256:323e5762a2412e4f274c34ffb655d57b439d3c057ada48167f8aa038729c1661"
-  useDigest: true
+  digest: ""
+  useDigest: false
 
 # -- Affinity for cilium-agent.
 affinity:
@@ -848,10 +848,10 @@ hubble:
     image:
       override: ~
       repository: "quay.io/cilium/hubble-relay"
-      tag: "v1.12.17"
+      tag: "v1.12.18"
        # hubble-relay-digest
-      digest: "sha256:4387d06a9c0089de6a27d815a9a475f539b2f9eaf6ec7d95d1670b502e18f7ea"
-      useDigest: true
+      digest: ""
+      useDigest: false
       pullPolicy: "IfNotPresent"
 
     # -- Specifies the resources for the hubble-relay pods
@@ -1648,16 +1648,16 @@ operator:
   image:
     override: ~
     repository: "quay.io/cilium/operator"
-    tag: "v1.12.17"
+    tag: "v1.12.18"
     # operator-generic-digest
-    genericDigest: "sha256:17a1b1cbc38bcce00fd4d793c7b6ab630fdaaa464d53e05967625c7b7306730d"
+    genericDigest: ""
     # operator-azure-digest
-    azureDigest: "sha256:a1f1151454586b7aa7e93564975074d861d8020cb52bd82a565ce645ab671645"
+    azureDigest: ""
     # operator-aws-digest
-    awsDigest: "sha256:aa2ba6331ec84e64f46205dbd9043a69b89f2eb177bbd29d7c5c88a052809cb0"
+    awsDigest: ""
     # operator-alibabacloud-digest
-    alibabacloudDigest: "sha256:06e7a741d4b74790dc8c9fcc594608630517cc7366e4d4ba97eef7133bd94bfb"
-    useDigest: true
+    alibabacloudDigest: ""
+    useDigest: false
     pullPolicy: "IfNotPresent"
     suffix: ""
 
@@ -1905,10 +1905,10 @@ preflight:
   image:
     override: ~
     repository: "quay.io/cilium/cilium"
-    tag: "v1.12.17"
+    tag: "v1.12.18"
     # cilium-digest
-    digest: "sha256:323e5762a2412e4f274c34ffb655d57b439d3c057ada48167f8aa038729c1661"
-    useDigest: true
+    digest: ""
+    useDigest: false
     pullPolicy: "IfNotPresent"
 
   # -- The priority class to use for the preflight pod.
@@ -2051,10 +2051,10 @@ clustermesh:
     image:
       override: ~
       repository: "quay.io/cilium/clustermesh-apiserver"
-      tag: "v1.12.17"
+      tag: "v1.12.18"
       # clustermesh-apiserver-digest
-      digest: "sha256:7bf626ebaafeaf51870f9f5dc4d5127797da97ab5365405cccadb480dae900cf"
-      useDigest: true
+      digest: ""
+      useDigest: false
       pullPolicy: "IfNotPresent"
 
     etcd:
