install: Update image digests for v1.12.18
Generated from https://github.com/cilium/cilium/actions/runs/7570608537.

## Docker Manifests

### cilium

`docker.io/cilium/cilium:v1.12.18@sha256:71218d52b2b9a63525e31e9be716810605696cbc02008e658953212f638d6b6b`
`quay.io/cilium/cilium:v1.12.18@sha256:71218d52b2b9a63525e31e9be716810605696cbc02008e658953212f638d6b6b`

### clustermesh-apiserver

`docker.io/cilium/clustermesh-apiserver:v1.12.18@sha256:237371c5e75c97389b81b5e44b6d39fd141e631efacf93fabafa6efa5174fa3a`
`quay.io/cilium/clustermesh-apiserver:v1.12.18@sha256:237371c5e75c97389b81b5e44b6d39fd141e631efacf93fabafa6efa5174fa3a`

### docker-plugin

`docker.io/cilium/docker-plugin:v1.12.18@sha256:f5e566a68c023aedfe34794377615f25be08a0d02a1f36ba514a5c1e130b75ae`
`quay.io/cilium/docker-plugin:v1.12.18@sha256:f5e566a68c023aedfe34794377615f25be08a0d02a1f36ba514a5c1e130b75ae`

### hubble-relay

`docker.io/cilium/hubble-relay:v1.12.18@sha256:c82cc7843cbc13314fdc3e0c1e8e584200ca30d9afefbbaaf7a3abb4e1246083`
`quay.io/cilium/hubble-relay:v1.12.18@sha256:c82cc7843cbc13314fdc3e0c1e8e584200ca30d9afefbbaaf7a3abb4e1246083`

### operator-alibabacloud

`docker.io/cilium/operator-alibabacloud:v1.12.18@sha256:1fa4cb0a255d45080c35d4fd92adb68700c864669d58ce396e18aa57488fc4fb`
`quay.io/cilium/operator-alibabacloud:v1.12.18@sha256:1fa4cb0a255d45080c35d4fd92adb68700c864669d58ce396e18aa57488fc4fb`

### operator-aws

`docker.io/cilium/operator-aws:v1.12.18@sha256:b106b24c317ba95d16ad55fa81c9058ccc5a5961c40afaa504eb28cd29d88422`
`quay.io/cilium/operator-aws:v1.12.18@sha256:b106b24c317ba95d16ad55fa81c9058ccc5a5961c40afaa504eb28cd29d88422`

### operator-azure

`docker.io/cilium/operator-azure:v1.12.18@sha256:c44725a1c55d06b02334cb226544e810f4070e524c3d859df41a48135fc7ec98`
`quay.io/cilium/operator-azure:v1.12.18@sha256:c44725a1c55d06b02334cb226544e810f4070e524c3d859df41a48135fc7ec98`

### operator-generic

`docker.io/cilium/operator-generic:v1.12.18@sha256:ac9b8a95d6faddacc1bca4145562c5143543dfbbc41

--- a/install/kubernetes/cilium/values.yaml
+++ b/install/kubernetes/cilium/values.yaml
@@ -113,8 +113,8 @@ image:
   tag: "v1.12.18"
   pullPolicy: "IfNotPresent"
   # cilium-digest
-  digest: ""
-  useDigest: false
+  digest: "sha256:71218d52b2b9a63525e31e9be716810605696cbc02008e658953212f638d6b6b"
+  useDigest: true
 
 # -- Affinity for cilium-agent.
 affinity:
@@ -850,8 +850,8 @@ hubble:
       repository: "quay.io/cilium/hubble-relay"
       tag: "v1.12.18"
        # hubble-relay-digest
-      digest: ""
-      useDigest: false
+      digest: "sha256:c82cc7843cbc13314fdc3e0c1e8e584200ca30d9afefbbaaf7a3abb4e1246083"
+      useDigest: true
       pullPolicy: "IfNotPresent"
 
     # -- Specifies the resources for the hubble-relay pods
@@ -1650,14 +1650,14 @@ operator:
     repository: "quay.io/cilium/operator"
     tag: "v1.12.18"
     # operator-generic-digest
-    genericDigest: ""
+    genericDigest: "sha256:ac9b8a95d6faddacc1bca4145562c5143543dfbbc41b244383b52b8be83238ab"
     # operator-azure-digest
-    azureDigest: ""
+    azureDigest: "sha256:c44725a1c55d06b02334cb226544e810f4070e524c3d859df41a48135fc7ec98"
     # operator-aws-digest
-    awsDigest: ""
+    awsDigest: "sha256:b106b24c317ba95d16ad55fa81c9058ccc5a5961c40afaa504eb28cd29d88422"
     # operator-alibabacloud-digest
-    alibabacloudDigest: ""
-    useDigest: false
+    alibabacloudDigest: "sha256:1fa4cb0a255d45080c35d4fd92adb68700c864669d58ce396e18aa57488fc4fb"
+    useDigest: true
     pullPolicy: "IfNotPresent"
     suffix: ""
 
@@ -1907,8 +1907,8 @@ preflight:
     repository: "quay.io/cilium/cilium"
     tag: "v1.12.18"
     # cilium-digest
-    digest: ""
-    useDigest: false
+    digest: "sha256:71218d52b2b9a63525e31e9be716810605696cbc02008e658953212f638d6b6b"
+    useDigest: true
     pullPolicy: "IfNotPresent"
 
   # -- The priority class to use for the preflight pod.
@@ -2053,8 +2053,8 @@ clustermesh:
       repository: "quay.io/cilium/clustermesh-apiserver"
       tag: "v1.12.18"
       # clustermesh-apiserver-digest
-      digest: ""
-      useDigest: false
+      digest: "sha256:237371c5e75c97389b81b5e44b6d39fd141e631efacf93fabafa6efa5174fa3a"
+      useDigest: true
       pullPolicy: "IfNotPresent"
 
     etcd:
