Use gsoci.azurecr.io container registry

--- a/install/kubernetes/cilium/values.yaml
+++ b/install/kubernetes/cilium/values.yaml
@@ -150,7 +150,7 @@ rollOutCiliumPods: false
 
 # -- Agent container image.
 image:
-  registry: docker.io
+  registry: gsoci.azurecr.io
   override: ~
   repository: "giantswarm/cilium"
   tag: "v1.14.5"
