ci: Move gs bucket env variable to set-env-variables action.
[ upstream commit e9b0ae0b54c9635c852e8cbcfa6bffb653aaf7ff ]

Signed-off-by: Marcel Zieba <marcel.zieba@isovalent.com>
Signed-off-by: Nicolas Busseneau <nicolas@isovalent.com>

--- a/.github/actions/set-env-variables/action.yml
+++ b/.github/actions/set-env-variables/action.yml
@@ -9,3 +9,4 @@ runs:
         echo "QUAY_ORGANIZATION_DEV=cilium" >> $GITHUB_ENV
         # no prod yet
         echo "QUAY_CHARTS_ORGANIZATION_DEV=cilium-charts-dev" >> $GITHUB_ENV
+        echo "GCP_PERF_RESULTS_BUCKET=gs://cilium-scale-results" >> $GITHUB_ENV
