ci: change schedule cloud regions
[ upstream commit 2c29d8faf88d4e8bf802a212ebc9b195b5428399 ]

Currently, cloud regions for schedule tests are all over the world.
The observation is tests in or close to us regions takes significatly less time
than other regions. This causes some of tests being canceled due to timeouts.
This commit changes regions to only US or closest regions.

Signed-off-by: Birol Bilgin <birol@cilium.io>
Signed-off-by: Nicolas Busseneau <nicolas@isovalent.com>

--- a/.github/actions/azure/k8s-versions.yaml
+++ b/.github/actions/azure/k8s-versions.yaml
@@ -2,9 +2,9 @@
 ---
 include:
   - version: "1.25"
-    location: westeurope
+    location: westus3
     index: 1
   - version: "1.26"
-    location: westus
+    location: westus2
     index: 2
     default: true
