--- a/.github/actions/aws/k8s-versions.yaml
+++ b/.github/actions/aws/k8s-versions.yaml
@@ -2,9 +2,9 @@
 ---
 include:
   - version: "1.23"
-    region: eu-central-1
+    region: ca-west-1
   - version: "1.24"
-    region: ap-northeast-1
+    region: us-west-1
   - version: "1.25"
     region: us-east-2
   - version: "1.26"
