--- a/.github/actions/gke/k8s-versions.yaml
+++ b/.github/actions/gke/k8s-versions.yaml
@@ -5,9 +5,9 @@ k8s:
     zone: us-west2-a
     vmIndex: 1
   - version: "1.25"
-    zone: asia-northeast1-c
+    zone: us-west3-a
     vmIndex: 2
   - version: "1.26"
-    zone: europe-north1-b
+    zone: us-east4-b
     vmIndex: 3
     default: true
