setup OSSF Scorecard
Signed-off-by: Matthieu MOREL <matthieu.morel35@gmail.com>

--- a/.github/workflows/update-label-backport-pr.yaml
+++ b/.github/workflows/update-label-backport-pr.yaml
@@ -16,6 +16,9 @@
             type: string
             description: "The stable branch version."
 
+    permissions:
+      contents: read
+
     jobs:
       backport-label-updater:
         name: Update labels of backported PRs
