chore: provide OSSF security insight
Signed-off-by: Matthieu MOREL <matthieu.morel35@gmail.com>
Co-authored-by: Joe Stringer <joe@cilium.io>
Signed-off-by: Joe Stringer <joe@cilium.io>

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -536,6 +536,7 @@ Makefile* @cilium/build
 /plugins/cilium-docker/ @cilium/docker
 /README.rst @cilium/docs-structure
 /SECURITY.md @cilium/contributing
+/SECURITY-INSIGHTS.yml @cilium/security
 /stable.txt @cilium/tophat
 /test/ @cilium/ci-structure
 /test/Makefile* @cilium/ci-structure @cilium/build
