pkg/bpf: Implement unreachable tail call pruning
This commit implements unreachable tail call pruning. When loading a
collection we check if a tail call is reachable. If not, we remove the
tail call from the collection. This saves us from having to load the
tail call program into the kernel.

Previously, we would conditionally not include tail calls in the
collection with pre-processor directives. Now that we do it in the
loader, we can remove the pre-processor directives.

Signed-off-by: Dylan Reimerink <dylan.reimerink@isovalent.com>

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -271,6 +271,8 @@ Makefile* @cilium/build
 /bpf/lib/auth.h @cilium/sig-datapath @cilium/sig-servicemesh
 /bpf/lib/encrypt.h @cilium/ipsec
 /bpf/lib/wireguard.h @cilium/wireguard @cilium/sig-datapath
+/bpf/lib/ids.h @cilium/loader
+/bpf/include/bpf/tailcall.h @cilium/loader
 /bugtool/ @cilium/tophat
 /bugtool/cmd/ @cilium/cli
 /cilium-dbg/ @cilium/cli
