--- a/.github/workflows/tests-clustermesh-upgrade.yaml
+++ b/.github/workflows/tests-clustermesh-upgrade.yaml
@@ -607,26 +607,27 @@ jobs:
           junit-directory: "cilium-junits"
 
   merge-upload:
-      if: ${{ always() }}
-      name: Merge and Upload Artifacts
-      runs-on: ubuntu-latest
-      needs: upgrade-and-downgrade
-      steps:
-        - name: Merge Sysdumps
-          if: ${{ needs.upgrade-and-downgrade.result == 'failure' }}
-          uses: actions/upload-artifact/merge@26f96dfa697d77e81fd5907df203aa23a56210a8 # v4.3.0
-          with:
-            name: cilium-sysdumps
-            pattern: cilium-sysdumps-*
-            retention-days: 5
-            delete-merged: true
-        - name: Merge JUnits
-          uses: actions/upload-artifact/merge@26f96dfa697d77e81fd5907df203aa23a56210a8 # v4.3.0
-          with:
-            name: cilium-junits
-            pattern: cilium-junits-*
-            retention-days: 5
-            delete-merged: true
+    if: ${{ always() }}
+    name: Merge and Upload Artifacts
+    runs-on: ubuntu-latest
+    needs: upgrade-and-downgrade
+    steps:
+      - name: Merge Sysdumps
+        if: ${{ needs.upgrade-and-downgrade.result == 'failure' }}
+        uses: actions/upload-artifact/merge@26f96dfa697d77e81fd5907df203aa23a56210a8 # v4.3.0
+        with:
+          name: cilium-sysdumps
+          pattern: cilium-sysdumps-*
+          retention-days: 5
+          delete-merged: true
+        continue-on-error: true
+      - name: Merge JUnits
+        uses: actions/upload-artifact/merge@26f96dfa697d77e81fd5907df203aa23a56210a8 # v4.3.0
+        with:
+          name: cilium-junits
+          pattern: cilium-junits-*
+          retention-days: 5
+          delete-merged: true
 
   commit-status-final:
     if: ${{ always() && github.event_name != 'push' }}
